--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,16 @@
   padding: 0 20px;
   margin: 0 auto;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e6f0ff;
+  border-radius: 0.85rem;
+}
