--- a/src/features/Main/pages/MainFeatureTwo/styles.scss
+++ b/src/features/Main/pages/MainFeatureTwo/styles.scss
@@ -30,6 +30,13 @@
       color: #002366;
       font-weight: 500;
       font-size: 1rem;
+      border: 2px solid transparent;
+
+      &:hover {
+        background: #002366;
+        color: #fff;
+        border-color: #fff;
+      }
     }
   }
 
@@ -38,5 +45,10 @@
     max-height: 27.46rem;
     right: 0;
     bottom: 0;
+    transition: 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+
+    &:hover {
+      transform: translateX(3.5rem);
+    }
   }
 }
