--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -4,6 +4,11 @@
   color: #fff;
   font-weight: 500;
   padding: $base-padding $base-padding * 2;
+  transition: 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
 }
 
 span {
