--- a/src/features/Header/pages/HeaderClient/styles.scss
+++ b/src/features/Header/pages/HeaderClient/styles.scss
@@ -28,6 +28,11 @@
 
     .header__logo--item {
       cursor: pointer;
+      transition: 0.2s ease-in-out;
+
+      &:hover {
+        transform: translateY(-0.75rem);
+      }
     }
   }
 
