--- a/src/features/Footer/pages/FooterLogo/styles.scss
+++ b/src/features/Footer/pages/FooterLogo/styles.scss
@@ -1,9 +1,20 @@
+@import '../../../../assets/sass/responsive';
+
 .footer__logo {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
   margin-top: 4.625rem;
+
+  @include smx {
+    flex-flow: column wrap;
+    align-items: flex-start;
+  }
+
+  .footer-logo {
+    margin-bottom: 1rem;
+  }
 
   p {
     display: inline-block;
