--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,4 @@
-@import './assets/sass/reset';
-@import './assets/sass/variables';
-@import './assets/sass/base';
+@import './assets/sass/index.scss';
 
 .container {
   width: 100%;
