--- a/src/components/ScrollTop/styles.scss
+++ b/src/components/ScrollTop/styles.scss
@@ -1,3 +1,5 @@
+@import '../../assets/sass/responsive';
+
 .scroll_top {
   position: fixed;
   right: -5rem;
@@ -19,5 +21,13 @@
 
 .visible {
   opacity: 1;
-  right: 1.75rem;
+  right: 0.75rem;
+
+  @include md {
+    transform: scale(0.9);
+  }
+
+  @include sm {
+    right: 0.5rem;
+  }
 }
