--- a/src/features/Header/pages/HeaderHome/styles.scss
+++ b/src/features/Header/pages/HeaderHome/styles.scss
@@ -1,6 +1,9 @@
+@import '../../../../assets/sass/index';
+
 .header__home {
   //padding-top: 2.375rem;
   background-color: #e6f0ff;
+  width: 100%;
 
   // header nav
   .nav {
@@ -13,14 +16,124 @@
     border-radius: 0 0 0.75rem 0.75rem;
     transition: 0.2s ease-in-out;
 
+    @include sm {
+      padding: 2rem 0 1.15rem;
+    }
+
     .nav__flex {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
+    .nav__left {
+      transition: 0.2s ease-in-out;
+
+      .nav__close {
+        display: none;
+        cursor: pointer;
+
+        box-icon {
+          background-color: #0f1b4c;
+          border-radius: 0.5rem;
+          transition: 0.2s ease-in-out;
+
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+
+        @include lg {
+          display: block;
+          position: absolute;
+          right: 0.5rem;
+          top: 0.5rem;
+        }
+
+        @include sm {
+          transform: scale(0.85);
+        }
+      }
+
+      @include lg {
+        position: fixed;
+        top: 0;
+        left: -120rem;
+        flex-flow: column nowrap;
+        padding-top: 3.5rem;
+        box-shadow: 3px 0 3px rgba(0, 0, 0, 0.06);
+        background-color: #fff;
+        min-width: 16rem;
+        border-radius: 0 0.75rem 0.75rem 0;
+        align-items: flex-start;
+        height: 100%;
+        z-index: 10;
+      }
+
+      @include sm {
+        min-width: 14.5rem;
+      }
+
+      .nav__list {
+        @include lg {
+          flex-flow: column nowrap;
+        }
+
+        .nav__item {
+          transition: 0.2s ease-in-out;
+          @include lg {
+            display: block;
+            border-left: 5px solid transparent;
+            margin: 0;
+            margin-bottom: 0.75rem;
+            padding: 0.5rem 0;
+          }
+
+          &:hover {
+            @include lg {
+              border-left-color: #0f1b4c;
+            }
+          }
+
+          a {
+            @include lg {
+              padding-left: 1.75rem - 0.3125rem;
+              font-size: 1.05rem;
+            }
+
+            @include sm {
+              font-size: 0.9rem;
+            }
+          }
+        }
+      }
+    }
+
+    .nav__show--menu {
+      left: 0;
+    }
+
+    .nav__menu {
+      display: none;
+      cursor: pointer;
+
+      @include lg {
+        display: block;
+      }
+    }
+
     &__logo {
       margin-right: 4.029375rem;
+
+      @include lg {
+        margin: 0;
+        margin-bottom: 3rem;
+        padding-left: 1.75rem;
+      }
+
+      @include sm {
+        max-width: 6.75rem;
+      }
     }
 
     &__item:not(:last-child) {
@@ -45,6 +158,17 @@
       &--sign-in {
         background-color: transparent;
         color: #0f1b4c;
+
+        @include sm {
+          padding: 0.5rem 1rem;
+          border: 1px solid #0f1b4c;
+        }
+      }
+
+      &--register {
+        @include sm {
+          display: none;
+        }
       }
 
       &--register:hover {
@@ -67,17 +191,55 @@
     margin-right: -5.5rem;
     padding-top: 7rem;
 
+    @include xl {
+      margin-right: 0;
+      padding-top: 11rem;
+    }
+
+    @include lg {
+      padding-top: 8rem;
+      padding-bottom: 1.25rem;
+    }
+
+    @include md {
+      flex-flow: column nowrap;
+    }
+
+    @include sm {
+      padding-top: 6.75rem;
+    }
+
     .header__content {
       width: 34.9375rem;
       margin-right: 2.4375rem;
 
+      @include md {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 2.25rem;
+      }
+
       .content__detail {
         margin-bottom: 2.5rem;
+
+        @include lg {
+          margin-bottom: 1.5rem;
+        }
 
         p {
           font-size: 1.125rem;
           font-weight: 500;
           color: #687690;
+
+          @include lg {
+            font-size: 0.85rem;
+          }
+        }
+
+        p:last-child {
+          @include sm {
+            display: none;
+          }
         }
 
         .content__title {
@@ -85,16 +247,42 @@
           line-height: 4.75rem;
           margin-top: 0.5rem;
           margin-bottom: 1.875rem;
+
+          @include xl {
+            font-size: 3.85rem;
+          }
+
+          @include lg {
+            font-size: 3rem;
+            line-height: 4rem;
+            margin-bottom: 1.25rem;
+          }
+
+          @include md {
+            font-size: 2.5rem;
+            line-height: 3rem;
+          }
+
+          @include xs {
+          }
         }
       }
 
       .content__btn {
         padding: 0.9375rem 2.3125rem;
+
+        @include lg {
+          padding: 0.75rem 1.65rem;
+        }
       }
     }
 
     .header__image {
       width: 36.5rem;
+
+      @include md {
+        width: 100%;
+      }
     }
   }
 }
