--- a/src/features/Main/pages/MainDescription/styles.scss
+++ b/src/features/Main/pages/MainDescription/styles.scss
@@ -1,14 +1,37 @@
+@import '../../../../assets/sass/responsive';
+
 .main__description {
   padding: 3.125rem 0;
   margin-top: 4.6875rem;
+
+  @include md {
+    margin-top: 7.6875rem;
+  }
 
   .description__body {
     display: flex;
     align-items: center;
 
+    @include md {
+      flex-flow: column wrap;
+    }
+
     .description__image {
       position: relative;
       min-width: 32.5rem;
+
+      @include lg {
+        min-width: 20rem;
+      }
+
+      @include lg {
+        order: 2;
+        margin-top: 7rem;
+      }
+
+      @include sm {
+        display: none;
+      }
 
       .description__detail {
         position: absolute;
@@ -19,6 +42,11 @@
         background-color: #ffffff;
         border-radius: 0.75rem;
 
+        @include lg {
+          max-width: 12.5rem;
+          top: -5rem;
+        }
+
         .description__detail--content {
           padding-bottom: 1.594375rem;
           border-bottom: 2px solid #e9e9e9;
@@ -26,6 +54,10 @@
             margin-bottom: 0.625rem;
             span {
               margin-left: 4rem;
+
+              @include lg {
+                margin-left: 1.5rem;
+              }
             }
           }
 
@@ -45,6 +77,14 @@
       width: 19.3125rem;
       margin-top: -15rem;
 
+      @include lg {
+        margin-top: -7rem;
+      }
+
+      @include md {
+        width: 100%;
+      }
+
       .description__line {
         width: 2.5625rem;
         height: 0.25rem;
@@ -58,11 +98,24 @@
         font-size: 2.1875rem;
         line-height: 2.8125rem;
         margin-bottom: 1.25em;
+
+        @include lg {
+          font-size: 1.85rem;
+          line-height: 2.15rem;
+        }
+
+        @include md {
+          margin-bottom: 1rem;
+        }
       }
 
       p {
         color: #5a6473;
         line-height: 1.875rem;
+
+        @include sm {
+          font-size: 0.85rem;
+        }
       }
     }
   }
@@ -73,21 +126,74 @@
     justify-content: center;
     align-items: center;
 
+    @include md {
+      flex-flow: wrap;
+      justify-content: inherit;
+    }
+
+    @include sm {
+      margin-top: 2rem;
+    }
+
     .description__info-item:not(:last-child) {
+      @include xl {
+        margin-right: 8rem;
+      }
+
+      @include lg {
+        margin-right: 5rem;
+      }
+
+      @include md {
+        margin-right: 0;
+        margin-bottom: 3rem;
+      }
+
       margin-right: 13.75rem;
     }
 
     .description__info-item {
+      @include md {
+        width: calc((100% / 2) - 5%);
+      }
+
+      @include smx {
+        width: 100%;
+        text-align: center;
+      }
+
+      @include sm {
+        width: 100%;
+      }
+
       h1 {
         font-size: 4rem;
         margin-bottom: 1.375rem;
         line-height: 4rem;
+
+        @include lg {
+          font-size: 3.5rem;
+        }
+
+        @include md {
+          font-size: 2.5rem;
+          line-height: 2.25rem;
+        }
+
+        @include sm {
+          font-size: 2.75rem;
+          line-height: 2.25rem;
+        }
       }
 
       p {
         color: #7b8087;
         font-size: 1.125rem;
         font-weight: 600;
+
+        @include md {
+          font-size: 1rem;
+        }
       }
     }
   }
