--- a/src/features/Main/pages/MainFeatureTwo/styles.scss
+++ b/src/features/Main/pages/MainFeatureTwo/styles.scss
@@ -1,15 +1,58 @@
-.main__feature-two {
+@import '../../../../assets/sass/responsive';
+
+.main__feature-two__container {
   position: relative;
+  height: 25.5625rem;
+  margin-top: 3.1875rem;
+  overflow: hidden;
+
+  @include md {
+    height: 49.375rem;
+  }
+}
+
+.main__feature-two {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: #063183;
   border-radius: 0.75rem;
-  margin-top: 3.1875rem;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   height: 23.125rem;
 
+  @include xl {
+    height: 22rem;
+  }
+
+  @include lg {
+    height: 20rem;
+  }
+
+  @include md {
+    height: 100%;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 1rem;
+  }
+
   .feature-two__content {
     margin-left: 5rem;
+
+    @include xl {
+      margin-left: 2.5rem;
+    }
+
+    @include md {
+      margin-left: 0;
+      margin-top: 5rem;
+    }
+
+    @include md {
+      margin-top: 2rem;
+    }
 
     h1 {
       color: #fff;
@@ -17,6 +60,10 @@
       line-height: 2.1875rem;
       font-size: 2.1875rem;
       font-weight: 600;
+
+      @include lg {
+        font-size: 2rem;
+      }
     }
 
     p {
@@ -32,6 +79,15 @@
       font-size: 1rem;
       border: 2px solid transparent;
 
+      @include lg {
+        padding: 0.75rem 1rem;
+      }
+
+      @include sm {
+        padding: 0.65rem 0.85rem;
+        font-size: 0.85rem;
+      }
+
       &:hover {
         background: #002366;
         color: #fff;
@@ -45,10 +101,22 @@
     max-height: 27.46rem;
     right: 0;
     bottom: 0;
-    transition: 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
 
-    &:hover {
-      transform: translateX(5rem);
+    @include xl {
+      transform: translateX(4rem);
+    }
+
+    @include lg {
+      transform: translateX(10rem);
+      width: 30rem;
+    }
+
+    @include md {
+      transform: translateX(6rem);
+    }
+
+    @include sm {
+      transform: translateX(10rem);
     }
   }
 }
