--- a/src/components/ScrollTop/styles.scss
+++ b/src/components/ScrollTop/styles.scss
@@ -3,7 +3,7 @@
 .scroll_top {
   position: fixed;
   right: -5rem;
-  bottom: 3rem;
+  bottom: 2rem;
   opacity: 0;
   transition: 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 
@@ -21,10 +21,16 @@
 
 .visible {
   opacity: 1;
-  right: 0.75rem;
+  right: 1.5rem;
+
+  @include xl {
+  transform: scale(1.3);
+  }
 
   @include md {
     transform: scale(0.9);
+    right: .75rem;
+    bottom: 1.5rem;
   }
 
   @include sm {
